corrected error with classifier, added RF classifier

--- a/notebooks/06_eodag_classify.ipynb
+++ b/notebooks/06_eodag_classify.ipynb
@@ -16,26 +16,22 @@
     "import pandas as pd\n",
     "import datetime as dt\n",
     "\n",
-    "from eodag import EODataAccessGateway\n",
-    "from eodag import setup_logging\n",
+    "from eodag import EODataAccessGateway, setup_logging\n",
     "\n",
     "from rasterio.crs import CRS\n",
-    "from rioxarray.merge import merge_arrays\n",
     "\n",
     "import eotools.shortcut as eoshort\n",
     "import eotools.loading as eoload\n",
     "import eotools.geometry as eogeom\n",
+    "import eotools.contrast as eocontrast\n",
     "\n",
-    "import geopandas as gpd\n",
-    "from sklearn import svm, tree\n",
+    "\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.colors as colors\n",
     "from pathlib import Path\n",
-    "import cmcrameri as cmc\n",
     "\n",
     "\n",
     "# Setup Verbose Values:\n",
@@ -107,7 +103,7 @@
    "outputs": [],
    "source": [
     "# Download Single Product\n",
-    "product = deserialized_search_results[0]\n",
+    "product = deserialized_search_results[3]\n",
     "path = dag.download(product)"
    ]
   },
@@ -126,7 +122,7 @@
     "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=10)\n",
     "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
     "folium.GeoJson(\n",
-    "    data=deserialized_search_results[0:1],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
+    "    data=deserialized_search_results[3:4],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
     "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
     ").add_to(fmap)\n",
     "\n",
@@ -203,6 +199,9 @@
    "source": [
     "# Loading multiple Bands into a dataset\n",
     "ds = eoload.load_single_product_regex(product=product, bands=assets, **common_params)\n",
+    "\n",
+    "# Clip the Dataset to get rid of outliers\n",
+    "ds = eocontrast.auto_clip_dataset(ds, percentile=0.02, pooled=False)\n",
     "ds"
    ]
   },
@@ -226,7 +225,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparing the data"
+    "### Preparing the data\n",
+    "\n",
+    "To prepare the data for the classification, you need to provide the path to the geojson files, where areas of interest are defined. The geojson files should contain the polygons of the areas of interest."
    ]
   },
   {
@@ -240,12 +241,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the data is prepared for the classification. The function uses the geojson files to extract the data from the downloaded images and generates a training and a test dataset. The training dataset is used to train the classifier and the test dataset is used to evaluate the classifier."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = eogeom.preprocess_data_to_classify(ds=ds, feature_path=path_forest, nonfeature_path=path_nonforest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use a classifier, you need to define/initiate the classifier and pass the training dataset to the classifier."
    ]
   },
   {
@@ -258,6 +273,13 @@
     "nb = GaussianNB()\n",
     "nb_test = nb.fit(X_train, y_train)\n",
     "nb_predict = nb.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have initiated the classifier and passed the training dataset, we can have a look at the classification results. Here we take a look at the confusion matrix and the classification report."
    ]
   },
   {
@@ -286,16 +308,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "bands = []\n",
-    "for band in ['B04', 'B03', 'B02', 'B08']:\n",
-    "    bands.append(single_img[band].values)\n",
-    "    \n",
-    "image_data = np.stack(bands, axis=2)"
+    "In order to apply the classifier to an image, we need to prepare the image for the classification. We load all the variables that are needed for the classification and stack them together."
    ]
   },
   {
@@ -304,12 +320,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bands = []\n",
+    "for band in assets:\n",
+    "    bands.append(single_img[band].values)\n",
+    "    \n",
+    "image_data = np.stack(bands, axis=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can apply the classifier to the image and get the classification results. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape the image data\n",
     "num_of_pixels = single_img.sizes['x'] * single_img.sizes['y']\n",
     "num_of_bands = len(bands)\n",
     "X_image_data = image_data.reshape(num_of_pixels, num_of_bands)\n",
     "\n",
+    "# Predict and reshape the image\n",
     "nb_predict_img = nb.predict(X_image_data)\n",
-    "\n",
     "nb_predict_img = nb_predict_img.reshape(single_img.sizes['y'], single_img.sizes['x'])"
    ]
   },
@@ -324,12 +361,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see the classification results, we can plot the classified image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_img['NB-forest'].plot.imshow(cmap='cmc.bamako_r')"
+    "alpha = 0.5\t\n",
+    "cmap_green = colors.ListedColormap([(1, 1, 1, alpha), 'green'])\n",
+    "\n",
+    "plot = single_img['NB-forest'].plot.imshow(cmap=cmap_green, cbar_kwargs={'ticks': [0.25,0.75]})\n",
+    "cbar = plot.colorbar\n",
+    "cbar.set_ticklabels(['non-forest', 'forest'])\n",
+    "plot.axes.set_title('Naive Bayes Classification')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also plot the classified image with the original image to compare the results."
    ]
   },
   {
@@ -350,12 +408,60 @@
    "outputs": [],
    "source": [
     "# Plotting Forest Mask on top of TCI\n",
-    "cmap = colors.ListedColormap([(1, 1, 1, 0), 'C0'])\n",
+    "cmap_blue = colors.ListedColormap([(1, 1, 1, 0), 'C0'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "tci['TCI'].plot.imshow(ax=ax, zorder=0)\n",
-    "single_img['NB-forest'].plot.imshow(ax=ax, zorder=1, cmap=cmap, alpha=1, add_colorbar=False)\n",
+    "single_img['NB-forest'].plot.imshow(ax=ax, zorder=1, cmap=cmap_blue, alpha=1, add_colorbar=False).axes.set_title('Naive Bayes Overlay on TCI')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Different Classifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we can try different classifiers and compare the results. We can use the same data and the same training and test dataset to compare the results. Here we use the Random Forest Classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestClassifier(n_estimators=100)\n",
+    "rf_test = rf.fit(X_train, y_train)\n",
+    "rf_predict = rf.predict(X_test)\n",
+    "\n",
+    "rf_predict_img = rf.predict(X_image_data)\n",
+    "rf_predict_img = rf_predict_img.reshape(single_img.sizes['y'], single_img.sizes['x'])\n",
+    "\n",
+    "single_img['RF-forest'] = xr.DataArray(rf_predict_img, dims=['y', 'x'], coords={'x': single_img['x'], 'y': single_img['y']})\n",
+    "single_img['RF-forest'].plot.imshow(cmap=cmap_green).axes.set_title('Random Forest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even have a look at what areas both classifiers classified."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_img['NB-RF'] = single_img['NB-forest'].where(single_img['RF-forest'] == single_img['NB-forest'], other=0)\n",
+    "single_img['NB-RF'].plot.imshow(cmap=cmap_green).axes.set_title('Areas where Naive Bayes and Random Forest agree')"
    ]
   },
   {
@@ -369,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NDVI and many other indices rely on the normalized difference, represented by the function below"
+    "Lastly we can also use an Index, like NDVI (Normalized Difference Vegetation Index) to get a grasp of the classification. NDVI and many other indices rely on the normalized difference, represented by the function below"
    ]
   },
   {
@@ -413,14 +519,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_img['NDVI'].plot.imshow(cmap='RdYlGn')"
+    "single_img['NDVI'].plot.imshow(cmap='RdYlGn').axes.set_title('NDVI')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NDVI does a good job seperating vegetation from non-vegetation but it can't seperate forest from vegetated cropland, or grassland."
+    "NDVI does a good job seperating vegetation from non-vegetation but it can't seperate forest from vegetated cropland, or grassland.\n",
+    "The NDVI ranges from -1 to 1, where values:\n",
+    "- from -1 to 0 indicate inanimate objects or dead vegetation or water\n",
+    "- from 0 to 0.33 indicate unhealthy vegetation\n",
+    "- from 0.33 to 0.66 indicate moderately healthy vegetation\n",
+    "- from 0.66 to 1 indicate very healthy vegetation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndvi_forest = single_img['NDVI'].where(single_img['NDVI'] >= 0.5, other=0)\n",
+    "single_img['NDVI-forest'] = ndvi_forest\n",
+    "single_img['NDVI-forest'].plot.imshow(cmap=cmap_green).axes.set_title('NDVI Vegetation')"
    ]
   }
  ],
